# crude

./: .gitignore  CLAUDE.md  INVARIANTS.md  LICENSE  README.md  WORLD_AS_OF.design.md  config.example.toml  crude.spec  pyproject.toml
debian/: changelog  control  copyright
docs/: APIs.md  RELEASING.md  airwallex.md  facebook.md  manual.md  meta.md  rezdy.md  skal-api.md  sonas.md  xero.md
formula/: crude.rb
src/crude_airwallex/: __init__.py  __main__.py  auth.py  beneficiaries.py  cli.py  cli_beneficiaries.py  cli_core.py  cli_fx.py  cli_issuing.py  cli_payments.py  cli_transfers.py  client.py  core.py  fx.py  issuing.py  payments.py  render.py  transfers.py
src/crude_atdw/: __init__.py  __main__.py  auth.py  cli.py  client.py
src/crude_clover/: __init__.py  __main__.py  catalog.py  cli.py  cli_catalog.py  cli_flatten.py  cli_orders.py  cli_resources.py  cli_status.py  client.py  flatten.py  orders.py  resources.py
src/crude_common/: __init__.py  asof.py  claude_command.py  cliutil.py  config.example.toml  config.py  httpapi.py  launcher.py  ldif.py  localtime.py  output.py  statestore.py  writeio.py
src/crude_deputy/: __init__.py  __main__.py  cli.py  client.py
src/crude_facebook/: __init__.py  cli.py  cli_resources.py  cli_status.py  client.py
src/crude_meta/: __init__.py  cli.py  cli_facebook.py  cli_instagram.py  cli_status.py  client.py  publishing.py
src/crude_rezdy/: __init__.py  __main__.py  cli.py  client.py
src/crude_skal/: __init__.py  __main__.py  cli.py  client.py
src/crude_sonas/: __init__.py  __main__.py  auth.py  cli.py  client.py
src/crude_xero/: __init__.py  __main__.py  accounting.py  assets.py  auth.py  bankfeeds.py  cli.py  cli_accounting.py  cli_assets.py  cli_bankfeeds.py  cli_crosscutting.py  cli_files.py  cli_finance.py  cli_payroll.py  cli_projects.py  client.py  files.py  finance.py  payroll.py  projects.py
src/pyatdw/: __init__.py  __main__.py  cli.py  client.py
src/pyskal/: __init__.py  __main__.py  auth.py  cli.py  client.py
tests/: conftest.py  test_accounts_and_timezone.py  test_airwallex.py  test_airwallex_auth.py  test_airwallex_issuing.py  test_airwallex_payments.py  test_airwallex_payouts.py  test_asof.py  test_asof_backends.py  test_asof_writes.py  test_clover_flatten.py  test_clover_resources.py  test_deputy_ldif.py  test_facebook_cli.py  test_facebook_client.py  test_httpapi_clients.py  test_ldif.py  test_live_smoke.py  test_localtime.py  test_meta_cli.py  test_meta_client.py  test_rezdy_customers.py  test_rezdy_writes.py  test_skal_members.py  test_sonas_dates.py  test_sonas_ldif.py  test_sonas_leads.py  test_sonas_reads.py  test_sonas_templates.py  test_statestore.py  test_xero.py  test_xero_assets.py  test_xero_auth.py  test_xero_bankfeeds.py  test_xero_files.py  test_xero_finance.py  test_xero_ldif.py  test_xero_payroll.py  test_xero_projects.py
