[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crude"
version = "1.0.1"
description = "CRUD-Engine: a lightweight CLI for read/write access to one's own data on sites without a usable public API (ATDW, Skål, Rezdy)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer[all]>=0.9",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
    "tomli_w>=1.0",
]

[project.scripts]
crude-atdw = "crude_atdw.cli:app"
crude-skal = "crude_skal.cli:app"
crude-rezdy = "crude_rezdy.cli:app"

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/SmartLayer/crude"
Issues = "https://github.com/SmartLayer/crude/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not live'"
markers = [
    "live: hits real site APIs; needs a crude config and `-m live` to run.",
]
